# xodex

./: .gitignore  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml  release.yml
api/: index.html
api/object/: index.html
api/scene/: index.html
concepts/: index.html
contributing/: index.html
docs/: index.md  usage.md
docs/api/: index.md  object.md  scene.md
docs/getting-started/: features.md  first-steps.md  index.md  installation.md
docs/guides/: index.md  project.md
docs/reference/: cli.md  settings.md
docs/reference/policies/: platforms.md
docs/tutorials/: flappy.md  index.md  project.md
docs/tutorials/flapp/: README.md
getting-started/: index.html
getting-started/features/: index.html
getting-started/first-steps/: index.html
getting-started/help/: index.html
project/: index.html
reference/: index.html
reference/cli/: index.html
reference/environment/: index.html
reference/policies/: index.html
reference/policies/license/: index.html
reference/policies/versioning/: index.html
reference/settings/: index.html
release-notes/: index.html
sponsorship/: index.html
src/xodex/conf/: __init__.py
tests/: __init__.py  test_game.py  test_image.py  test_management.py  test_objectmanager .py  test_objects.py  test_scenemanager.py  test_scenes.py  test_sounds.py  test_storage.py
tutorials/: index.html
tutorials/flappy/: index.html
tutorials/flappy/objects/: index.html
tutorials/flappy/scenes/: index.html
xodex/: __init__.py  __main__.py  __version__.py  version.py
xodex/conf/: __init__.py  settings.py
xodex/conf/template/: README.md
xodex/conf/template/project/: __main__.py  objects.py  scenes.py  settings.py
xodex/conf/template/project/objects/: objects.py
xodex/conf/template/project/scenes/: scenes.py
xodex/contrib/: basicobjects.py  main.py  mainscene.py  text.py  uiscene.py
xodex/contrib/objects/: __init__.py  animator.py  image.py  spritesheet.py  text.py
xodex/contrib/scenes/: __init__.py  blur.py  xodex.py
xodex/core/: __init__.py  exceptions.py  localization.py  management.py
xodex/core/interface/: __init__.py  drawable.py  eventful.py  logical.py  mixins.py
xodex/core/management/: __init__.py  command.py
xodex/core/management/commands/: build.py  shell.py  start.py
xodex/game/: __init__.py  game.py  sounds.py  storage.py
xodex/object/: __init__.py  animator.py  base.py  image.py  manager.py  objects.py  spritesheet.py
xodex/objects/: __init__.py  animator.py  image.py  manager.py  objects.py  spritesheet.py
xodex/scene/: __init__.py  base.py  blur.py  layer.py  manager.py  signal.py
xodex/scenes/: __init__.py  base_scene.py  blur_scene.py  manager.py
xodex/utils/: __init__.py  functions.py  json.py  log.py  logging.py  singleton.py  storage.py  values.py  version.py
