[project]
name = "xodex"
version = "0.1.0"
description = "A modular, extensible Pygame game engine for rapid 2D game development."
long_description = "A modern Customizable Pygame Game engine."
long_description_content_type = "text/markdown"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Sackey Ezekiel Etrue", email = "sackeyetrue@gmail.com" },
  {name = "Xodex Contributers"},
]
maintainers = [
  { name = "Sackey Ezekiel Etrue", email = "sackeyetrue@gmail.com" },
]
keywords = [
  "pygame", "game engine", "2d", "xodex", "games", "engine", "framework"
]
classifiers = [
  "Framework :: Xodex",
  "Development Status :: 1 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Linux",
  "Operating System :: MacOS",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pygame>=2.6.1",
    "pygameui",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
xodex = "xodex.__main__:execute_from_command_line"

[project.urls]
Homepage = "https://github.com/djoezeke/xodex"
Documentation = "https://github.com/djoezeke/xodex#readme"
Issues = "https://github.com/djoezeke/xodex/issues"
"Release Notes" = "https://github.com/djoezeke/xodex/releases"
Source = "https://github.com/djoezeke/xodex"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort"
]
docs = [
  "sphinx",
]

[tool.uv.sources]
pygameui = { path = "../PygameUI", editable = true }

# Configure Ruff's linting rules
[tool.ruff]
select = ["E", "W", "F", "I"] # Example: select error, warning, flake8-bugbear, and isort rules
ignore = ["E501"] # Example: ignore line length errors
line-length = 120 # Example: set line length

# Further linting configurations
[tool.ruff.lint]
unfixable = ["F841"] # Example: prevent fixing of unused local variables
    
# Configure Ruff's formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
